# suibase-api-docs

./: Cargo.toml  README.md  postprocess.sh  preprocess.sh
.github/workflows/: deploy-docs.yml
docs/: crates.js  help.html  index.html  search-index.js  settings.html  source-files.js
docs/implementors/core/default/: trait.Default.js
docs/implementors/core/error/: trait.Error.js
docs/implementors/core/fmt/: trait.Debug.js  trait.Display.js
docs/implementors/core/marker/: trait.Freeze.js  trait.Send.js  trait.Sync.js  trait.Unpin.js
docs/implementors/core/panic/unwind_safe/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
docs/src/suibase/: error.rs.html  lib.rs.html  suibase_helper_impl.rs.html  suibase_root.rs.html  suibase_workdir.rs.html
docs/suibase/: all.html  enum.Error.html  index.html  sidebar-items.js  struct.Helper.html
docs/suibase/error/: enum.Error.html
src/: main.rs
